--- a/textView/Base.lproj/Main.storyboard
+++ b/textView/Base.lproj/Main.storyboard
@@ -1,24 +1,137 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lzg-Mm-q9G">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Photo Collection View Controller-->
+        <scene sceneID="Vji-kb-ECc">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <collectionViewController id="TlS-GP-Mci" customClass="PhotoCollectionViewController" customModule="textView" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="X0v-zf-VV2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Nag-gJ-4Xv">
+                            <size key="itemSize" width="150" height="150"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="imageCell" id="l3D-DE-PoL" customClass="PictureCollectionViewCell" customModule="textView" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6c0-H7-Iyd">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="6c0-H7-Iyd" firstAttribute="leading" secondItem="l3D-DE-PoL" secondAttribute="leading" id="COB-Gh-Bgx"/>
+                                    <constraint firstAttribute="bottom" secondItem="6c0-H7-Iyd" secondAttribute="bottom" id="c5d-C9-gXa"/>
+                                    <constraint firstItem="6c0-H7-Iyd" firstAttribute="top" secondItem="l3D-DE-PoL" secondAttribute="top" id="kAG-yA-ka4"/>
+                                    <constraint firstAttribute="trailing" secondItem="6c0-H7-Iyd" secondAttribute="trailing" id="zV3-R0-zO8"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="6c0-H7-Iyd" id="Rvk-9B-kNk"/>
+                                    <segue destination="Rab-1r-MQk" kind="show" identifier="imageDetail" id="EhX-oA-BIR"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="TlS-GP-Mci" id="o5c-tV-1pE"/>
+                            <outlet property="delegate" destination="TlS-GP-Mci" id="JCe-ey-Jq7"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="Ndv-NL-uxn">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="2Ex-Va-u0k">
+                            <connections>
+                                <action selector="addTapped:" destination="TlS-GP-Mci" id="VXA-gI-r8f"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IjE-0x-tWm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1077.5999999999999" y="644.52773613193403"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="che-sg-rVL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Lzg-Mm-q9G" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="aml-Gt-m4O">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="TlS-GP-Mci" kind="relationship" relationship="rootViewController" id="XOr-aY-MMC"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aUT-OV-p1N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="180" y="792.95352323838085"/>
+        </scene>
+        <!--Image View Controller-->
+        <scene sceneID="AZ0-iK-O7w">
+            <objects>
+                <viewController id="Rab-1r-MQk" customClass="ImageViewController" customModule="textView" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dSD-ey-TC8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="06r-aS-7Lu">
+                                <rect key="frame" x="0.0" y="85.5" width="375" height="581.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mxL-eO-PIj">
+                                <rect key="frame" x="0.0" y="64" width="375" height="21.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="UC5-zm-2zi">
+                                <rect key="frame" x="0.0" y="85.5" width="375" height="581.5"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="06r-aS-7Lu" secondAttribute="bottom" id="2A6-L4-SaX"/>
+                            <constraint firstItem="mXB-l0-UDM" firstAttribute="trailing" secondItem="06r-aS-7Lu" secondAttribute="trailing" id="8xg-Qs-7a9"/>
+                            <constraint firstItem="06r-aS-7Lu" firstAttribute="top" secondItem="mxL-eO-PIj" secondAttribute="bottom" id="AGu-xg-frc"/>
+                            <constraint firstItem="mxL-eO-PIj" firstAttribute="leading" secondItem="mXB-l0-UDM" secondAttribute="leading" id="EOC-QG-c15"/>
+                            <constraint firstItem="UC5-zm-2zi" firstAttribute="trailing" secondItem="06r-aS-7Lu" secondAttribute="trailing" id="O1h-lN-VkA"/>
+                            <constraint firstItem="UC5-zm-2zi" firstAttribute="top" secondItem="06r-aS-7Lu" secondAttribute="top" id="Pof-t0-6Oo"/>
+                            <constraint firstItem="06r-aS-7Lu" firstAttribute="leading" secondItem="mXB-l0-UDM" secondAttribute="leading" id="brk-SC-iAO"/>
+                            <constraint firstItem="mXB-l0-UDM" firstAttribute="trailing" secondItem="mxL-eO-PIj" secondAttribute="trailing" id="cBy-l8-s5s"/>
+                            <constraint firstItem="UC5-zm-2zi" firstAttribute="bottom" secondItem="06r-aS-7Lu" secondAttribute="bottom" id="ccx-MN-Zzo"/>
+                            <constraint firstItem="UC5-zm-2zi" firstAttribute="leading" secondItem="06r-aS-7Lu" secondAttribute="leading" id="m3H-ID-upb"/>
+                            <constraint firstItem="mxL-eO-PIj" firstAttribute="top" secondItem="mXB-l0-UDM" secondAttribute="top" id="nIp-OK-YNz"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mXB-l0-UDM"/>
+                    </view>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="never" id="9ke-eV-y2V"/>
+                    <connections>
+                        <outlet property="faceBoxView" destination="UC5-zm-2zi" id="dli-c8-MNm"/>
+                        <outlet property="imageView" destination="06r-aS-7Lu" id="NTx-3H-42S"/>
+                        <outlet property="predictionLabel" destination="mxL-eO-PIj" id="Cac-pN-fsv"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Jw-UZ-OSZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1889" y="645"/>
         </scene>
     </scenes>
 </document>
